# portable-audio-library

./: .gitignore  Cargo.toml  README.md
.github/workflows/: check.yml  tests.yml
doc-tests/: example-library.pal
src/: error.rs  lib.rs  main.rs
src/builder/: directory.rs  m3u.rs  mod.rs
src/compression/: gz.rs  lz4.rs  mod.rs  none.rs  snap.rs
src/serialization/: mod.rs
