[package]
name = "portable-audio-library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.4", features = ["derive"] }
flate2 = "1.0.30"
indicatif = "0.17.8"
json = "0.12.4"
lz4 = "1.24.0"
serde = { version = "1.0.199", features = ["derive"] }
sha2 = "0.11.0-pre.3"
snap = "1.1.1"
tar = "0.4.40"
tempfile = "3.10.1"
thiserror = "1.0.59"
uuid = { version = "1.8.0", features = ["v4"] }
